fixing spacing issues - should help with #1

--- a/app/assets/stylesheets/blacklight.css.scss
+++ b/app/assets/stylesheets/blacklight.css.scss
@@ -4,21 +4,21 @@
 
 @import 'blacklight/blacklight';
 
-.large_search_container {
- width: 100%;
- top: 13px;
-}
-
 #article-container {
   border-left: 1px dotted #e5b992;
 }
 
 .form-search {
-  padding-top: 30px;
+  padding: 50px 0 30px 0;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 body {
- padding-bottom: 90px;
+ margin-bottom: 90px;
  height: 100%
 }
 
@@ -37,11 +37,14 @@ html { height: 100%;}
   min-height: 105px;
 }
 
-.navbar-bottom {
+.footer {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
+ height: 90px;
+	background: #FFF0B9;
+	border-top: 1px solid #090909;
 }
 
 .navbar-bottom:before {
@@ -120,32 +123,6 @@ body {
 
 #header-navbar .navbar-brand {
   height: 100px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.footer {
-	background: #FFF0B9;
-	height: auto;
-        margin-top: 10px;
-	padding-bottom: 30px;
-	position: relative;
-	width: 100%;
-	border-top: 1px solid #090909;
 }
 
 
